98-monitoring/gatus/03-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gatus
  namespace: monitoring
  labels:
    app: gatus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
    spec:
      enableServiceLinks: true
      securityContext:
      containers:
      - name: gatus
        image: twinproduction/gatus:latest
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          privileged: false
        volumeMounts:
        - name: gatus-data
          mountPath: /data
        - name: gatus-config
          mountPath: /config
      volumes:
      - name: gatus-data
        persistentVolumeClaim:
          claimName: gatus-data-pvc
      - name: gatus-config
        configMap:
          name: gatus-config
